# Django-Ecommerce-App

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
Django_Ecommerce_App/: apps.py  urls.py
