[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Django-Ecommerce-App"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Mehdi Ahmadi", email = "ahmadi.mehd2@gmail.com" }
]

dependencies = [
    "django>=5.0"
    
]

[project.urls]
homepage = ""
source = ""
issues = ""
